# Tenor

./: README.md
NoiseAlertSystemNode/: platformio.ini
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/: library.properties
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/esp32/esp32_camera/: esp32_camera.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/esp32/esp32_fusion/: esp32_fusion.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/esp32/esp32_microphone/: esp32_microphone.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/nano_ble33_sense/nano_ble33_sense_camera/: nano_ble33_sense_camera.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/examples/nicla_sense/nicla_sense_fusion/: nicla_sense_fusion.ino
NoiseAlertSystemNode/lib/ei-audio-anomaly-detector-arduino-1.0.1-impulse-#1/Audio-Anomaly-Detector_inferencing/src/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
NoiseAlertSystemNode/src/: main.cpp
QT_PiDevelopment/: CMakeLists.txt  Main.qml  MqttHelper.h  main.cpp
(+13 files in other folders)
